# pipinstallable

./: README.md  pyproject.toml  requirements.txt
src/Pipinstallable/: label_encoder.pkl  model.pkl  vectorizer.pkl
src/pipinstallable.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
